[package]
name = "zeta_cpi"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "zeta_cpi"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
devnet = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
bytemuck = "1.4.0"
rust_decimal = { git = "https://github.com/zetamarkets/rust-decimal.git", features = ["maths"] }
cpi-interface = { path = "../../../cpi-interface", version = "0.1.0" }
