[package]
name = "zeta_cpi"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "zeta_cpi"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.2"
solana-program = "1.8.5"
sha2 = "0.9.8"
cpi-interface = { path = "../../cpi-interface", version = "0.1.0" }